apps/api/prodConfig/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: api:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: mongodb-cert
              mountPath: "/etc/ssl/certs"
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: mongodb-cert
          secret:
            secretName: mongodb-ca-cert
            items:
              - key: mongodb-ca.pem
                path: mongodb-ca.pem
