apps/api/prodConfig/nestjs-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestjs
  template:
    metadata:
      labels:
        app: nestjs
    spec:
      containers:
        - name: nestjs-container
          image: gcr.io/area-cluster/backend:${GITHUB_SHA}
          ports:
            - containerPort: 3001
          imagePullPolicy: Always
          volumeMounts:
            - name: mongodb-ca
              mountPath: /etc/ssl/mongodb-ca.pem
              subPath: mongodb-ca.pem
      volumes:
        - name: mongodb-ca
          secret:
            secretName: mongodb-ca-secret
            items:
              - key: mongodb-ca.pem
                path: mongodb-ca.pem
