apps/api/prodConfig/nestjs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  selector:
    app: nestjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: LoadBalancer
