apps/api/prodConfig/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.area.oden-app.com`)
      kind: Rule
      services:
        - name: api-service
          port: 80
  tls: {}
